--- a/graphic/crossplatform/WebViewControllerTest/entry/src/main/resources/rawfile/index_runJavaScriptExt.html
+++ b/graphic/crossplatform/WebViewControllerTest/entry/src/main/resources/rawfile/index_runJavaScriptExt.html
@@ -1,12 +1,11 @@
-<!-- index_runJavaScriptExt.html -->
 <!DOCTYPE html>
-<html lang="en-gb">
+<html lang='en-gb'>
 <body>
 <h1>run JavaScript Ext demo</h1>
 </body>
-<script type="text/javascript">
+<script type='text/javascript'>
     function getString() {
-      return "stringFromHTML";
+      return 'stringFromHTML';
     }
     function getNumber() {
       return 123;
@@ -14,17 +13,17 @@
     function getBoolean() {
       return true;
     }
-    function getArray_number() {
+    function getNumberArray() {
       return [1, 2, 3];
     }
-    function getArray_string() {
-      return ["1", "2", "3"];
+    function getStringArray() {
+      return ['1', '2', '3'];
     }
-    function getArray_boolean() {
+    function getBooleanArray() {
       return [true, false, true];
     }
     function test() {
-      return "test Success";
+      return 'test Success';
     }
 </script>
 </html>
