--- a/graphic/crossplatform/WebViewJSRegisterTest/entry/src/main/resources/rawfile/index_Async.html
+++ b/graphic/crossplatform/WebViewJSRegisterTest/entry/src/main/resources/rawfile/index_Async.html
@@ -30,7 +30,7 @@
 </body>
 <script>
     function htmlTestAsyncString() {
-        backToEts.testAsyncString("webTest");
+        backToEts.testAsyncString('webTest');
     }
 
     function htmlTestAsyncNumber() {
