--- a/graphic/crossplatform/WebViewJSRegisterTest/entry/src/main/resources/rawfile/index_Exception.html
+++ b/graphic/crossplatform/WebViewJSRegisterTest/entry/src/main/resources/rawfile/index_Exception.html
@@ -17,8 +17,8 @@
 </body>
 <script>
     function htmlTestSyncString() {
-        let result = backToEts.testSyncString("webTest");
-        let str = result ? result.toString() : "";
+        let result = backToEts.testSyncString('webTest');
+        let str = result ? result.toString() : '';
         return str;
     }
 </script>
