--- a/graphic/crossplatform/WebViewJSRegisterTest/entry/src/main/resources/rawfile/index_Sync.html
+++ b/graphic/crossplatform/WebViewJSRegisterTest/entry/src/main/resources/rawfile/index_Sync.html
@@ -31,7 +31,7 @@
 <script>
     function htmlTestSyncString() {
         let result = backToEts.testSyncString('webTest');
-        let str = result ? result.toString() : "";
+        let str = result ? result.toString() : '';
         document.getElementById('demo').innerHTML = str;
         return str;
     }
