--- a/graphic/crossplatform/WebViewJSRegisterTest/entry/src/main/resources/rawfile/index_Async.html
+++ b/graphic/crossplatform/WebViewJSRegisterTest/entry/src/main/resources/rawfile/index_Async.html
@@ -64,5 +64,17 @@
     function htmlTestAsyncBooleanDictionary() {
         backToEts.testAsyncBooleanDictionary({'key': true});
     }
+
+    function htmlTestAsyncArray10() {
+        backToEts.testAsyncArray10([1,[2,[3,[4,[5,[6,[7,[8,[9,[10,[11]]]]]]]]]]]);
+    }
+
+    function htmlTestAsyncDictionary10() {
+        backToEts.testAsyncDictionary10({'1':{'2':{'3':{'4':{'5':{'6':{'7':{'8':{'9':{'10':{'11':222}}}}}}}}}}});
+    }
+
+    function htmlTestAsyncArrayDictionary10() {
+        backToEts.testAsyncArrayDictionary10({'key':[1,[2,[3,[4,[5,[6,[7,[8,[9,[10,[11]]]]]]]]]]]});
+    }
 </script>
 </html>
