--- a/graphic/crossplatform/WebViewJSRegisterTest/entry/src/main/resources/rawfile/index_Exception.html
+++ b/graphic/crossplatform/WebViewJSRegisterTest/entry/src/main/resources/rawfile/index_Exception.html
@@ -16,9 +16,10 @@
 <div id="pageHeight"></div>
 </body>
 <script>
-    function htmlTestSyncString() {
-        let result = backToEts.testSyncString('webTest');
+    function htmlTestString() {
+        let result = backToEts.testString('webTest');
         let str = result ? result.toString() : '';
+        document.getElementById('demo').innerHTML = str;
         return str;
     }
 </script>
