--- a/graphic/crossplatform/WebViewJSRegisterTest/entry/src/main/resources/rawfile/index_Sync.html
+++ b/graphic/crossplatform/WebViewJSRegisterTest/entry/src/main/resources/rawfile/index_Sync.html
@@ -83,5 +83,23 @@
         document.getElementById('demo').innerHTML = JSON.stringify(str);
         return JSON.stringify(str);
     }
+
+    function htmlTestSyncArray10() {
+        let str = backToEts.testSyncArray10([1,[2,[3,[4,[5,[6,[7,[8,[9,[10,[11]]]]]]]]]]]);
+        document.getElementById('demo').innerHTML= str;
+        return JSON.stringify(str);
+    }
+
+    function htmlTestSyncDictionary10() {
+        let str = backToEts.testSyncDictionary10({'1':{'2':{'3':{'4':{'5':{'6':{'7':{'8':{'9':{'10':{'11':222}}}}}}}}}}});
+        document.getElementById('demo').innerHTML= str;
+        return JSON.stringify(str);
+    }
+
+    function htmlTestSyncArrayDictionary10() {
+        let str = backToEts.testSyncArrayDictionary10({'key':[1,[2,[3,[4,[5,[6,[7,[8,[9,[10,[11]]]]]]]]]]]});
+        document.getElementById('demo').innerHTML= str;
+        return JSON.stringify(str);
+    }
 </script>
 </html>
